<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_1" />

    <View
        android:id="@+id/fake_status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusbar_view_height"
        android:layout_alignParentTop="true"
        android:background="#0dffffff" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fake_status_bar"
        android:background="#0dffffff"
        android:theme="@style/Theme.ToolBar.HomeTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/car_login"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/car_num"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/carNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:background="@null"
                android:text="川A"
                android:textColor="#fff"
                android:textSize="15sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/car_color"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/carColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:drawablePadding="30dp"
                android:drawableRight="@mipmap/xiala"
                android:gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/vin"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/carVin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:background="@null"
                android:textColor="#fff"
                android:textSize="15sp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/check_mode"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/carType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:drawablePadding="30dp"
                android:drawableRight="@mipmap/xiala"
                android:gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#ffffff" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/search_btn_bg"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>